--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    color: #333;
+    background-color: #191919;
+    color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -10,9 +10,9 @@ body {
 }
 
 .container {
-    background: #fff;
+    background: #333;
     border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
     padding: 20px;
     max-width: 500px;
     width: 100%;
@@ -21,6 +21,7 @@ body {
 
 h1 {
     margin-bottom: 20px;
+    color: #fff;
 }
 
 .form-group {
@@ -31,6 +32,7 @@ label {
     display: block;
     margin-bottom: 5px;
     font-weight: bold;
+    color: #fff;
 }
 
 select {
@@ -38,11 +40,15 @@ select {
     padding: 10px;
     font-size: 14px;
     margin-bottom: 15px;
+    background-color: #444;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
 }
 
 button {
-    background-color: #007bff;
-    color: white;
+    background-color: #3498db;
+    color: #fff;
     border: none;
     padding: 10px 20px;
     font-size: 14px;
@@ -51,7 +57,7 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #3b9ee0;
 }
 
 .hidden {
@@ -59,7 +65,7 @@ button:hover {
 }
 
 .progress-bar {
-    background-color: #f0f0f0;
+    background-color: #333;
     border-radius: 5px;
     overflow: hidden;
     margin-top: 20px;
@@ -69,7 +75,7 @@ button:hover {
 
 .progress-bar div {
     height: 100%;
-    background-color: #007bff;
+    background-color: #3498db;
     width: 0;
     transition: width 0.5s;
 }
@@ -77,6 +83,7 @@ button:hover {
 #progressText {
     margin-top: 10px;
     font-weight: bold;
+    color: #fff;
 }
 
 .key-item {
@@ -89,33 +96,34 @@ button:hover {
     flex: 1;
     padding: 10px;
     font-size: 14px;
-    border: 1px solid #ccc;
+    border: 1px solid #555;
     border-radius: 5px;
     margin-right: 10px;
+    background-color: #444;
+    color: #fff;
 }
 
 .copyKeyBtn {
-    background-color: #28a745;
+    background-color: #9b59b6;
     border: none;
     padding: 10px 20px;
-    color: white;
+    color: #fff;
     font-size: 14px;
     border-radius: 5px;
     cursor: pointer;
 }
 
 .copyKeyBtn:hover {
-    background-color: #218838;
+    background-color: #e74c3c;
 }
 
 .footer {
     margin-top: 20px;
     font-size: 14px;
+    color: #fff;
 }
 
 #copyStatus {
     margin-top: 10px;
-    color: green;
+    color: #2ecc71;
 }
-
- 
