--- a/style.css
+++ b/style.css
@@ -1,129 +1,73 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #191919;
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
+  margin:0px;
+}
+.center {
+  margin: 40px;
+}
+.topbar{
+  overflow: hidden;
+  background: #C8CBD0;
+  box-shadow: 0px 4px 0 0 #4D5259;
 }
 
-.container {
-    background: #333;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-    padding: 20px;
-    max-width: 500px;
-    width: 100%;
-    text-align: center;
+.topbar a {
+  background: #748E54;
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  box-shadow: 4px 0px 0 0 #54673C;
 }
 
-h1 {
-    margin-bottom: 20px;
-    color: #fff;
+.topbar a:hover {
+  background-color: #92AC72;
+  color: black;
 }
 
-.form-group {
-    margin-bottom: 15px;
+.topbar a.active {
+  background-color: #4CAF50;
+  color: white;
 }
 
-label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
-    color: #fff;
+.round{
+  font-size: 12px;
+  color: #4D5259;
+  line-height: 1.5;
+  font-weight: bold;
+  padding: .5em 2em;
+  background: #FFFFFF;
+  border: 2px solid #4D5259;
+  box-shadow: 4px 4px 0 0 #4D5259;
+  border-radius: 100px;
+  outline:0;
+  transition: ease all .1s;
+} 
+.round:active {
+  transform: translateY(4px) translateX(4px);
+  box-shadow: 0px 0px 0 0 #4D5259;
+}
+.round:hover {
+  background: #d3d3d3;
 }
 
-select {
-    width: 100%;
-    padding: 10px;
-    font-size: 14px;
-    margin-bottom: 15px;
-    background-color: #444;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
+.settings {
+  font-size: 10px;
+  color: #4D5259;
+  line-height: 1.5;
+  font-weight: bold;
+  padding: .5em 2em;
+  background: #FFFFFF;
+  border: 2px solid #4D5259;
+  box-shadow: 4px 4px 0 0 #4D5259;
+  outline:0;
 }
 
-button {
-    background-color: #3498db;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    font-size: 14px;
-    border-radius: 5px;
-    cursor: pointer;
+.settings:active {
+  transform: translateY(4px) translateX(4px);
+  box-shadow: 0px 0px 0 0 #4D5259;
 }
-
-button:hover {
-    background-color: #3b9ee0;
-}
-
-.hidden {
-    display: none;
-}
-
-.progress-bar {
-    background-color: #333;
-    border-radius: 5px;
-    overflow: hidden;
-    margin-top: 20px;
-    height: 30px;
-    position: relative;
-}
-
-.progress-bar div {
-    height: 100%;
-    background-color: #3498db;
-    width: 0;
-    transition: width 0.5s;
-}
-
-#progressText {
-    margin-top: 10px;
-    font-weight: bold;
-    color: #fff;
-}
-
-.key-item {
-    display: flex;
-    align-items: center;
-    margin-top: 10px;
-}
-
-.key-item input {
-    flex: 1;
-    padding: 10px;
-    font-size: 14px;
-    border: 1px solid #555;
-    border-radius: 5px;
-    margin-right: 10px;
-    background-color: #444;
-    color: #fff;
-}
-
-.copyKeyBtn {
-    background-color: #9b59b6;
-    border: none;
-    padding: 10px 20px;
-    color: #fff;
-    font-size: 14px;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.copyKeyBtn:hover {
-    background-color: #e74c3c;
-}
-
-.footer {
-    margin-top: 20px;
-    font-size: 14px;
-    color: #fff;
-}
-
-#copyStatus {
-    margin-top: 10px;
-    color: #2ecc71;
+.settings:hover {
+  background: #d3d3d3;
 }
